--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
   <section>
     <h2>Experience & Activities</h2>
     <ul>
+      <li>Manual Testing & SDLC Training – Qspiders Vashi (Completed) </li>
       <li>Hackathon Graphics Head (Core Member)</li>
       <li>YouTube (Streamer/Content Creator) - @BiT2-jodd</li>
     </ul>
@@ -179,3 +180,4 @@
 
 </body>
 </html>
+
